; ModuleID = '/home/carl/AnghaBench/git/extr_commit.c_standard_header_field.c'
source_filename = "/home/carl/AnghaBench/git/extr_commit.c_standard_header_field.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"tree\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"parent\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"author\00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"committer\00", align 1
@.str.4 = private unnamed_addr constant [9 x i8] c"encoding\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64)* @standard_header_field to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @standard_header_field(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = icmp eq i64 %5, 4
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @memcmp(i8* %8, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %42

11:                                               ; preds = %7, %2
  %12 = load i64, i64* %4, align 8
  %13 = icmp eq i64 %12, 6
  br i1 %13, label %14, label %18

14:                                               ; preds = %11
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @memcmp(i8* %15, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 6)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %42

18:                                               ; preds = %14, %11
  %19 = load i64, i64* %4, align 8
  %20 = icmp eq i64 %19, 6
  br i1 %20, label %21, label %25

21:                                               ; preds = %18
  %22 = load i8*, i8** %3, align 8
  %23 = call i32 @memcmp(i8* %22, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i32 6)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %42

25:                                               ; preds = %21, %18
  %26 = load i64, i64* %4, align 8
  %27 = icmp eq i64 %26, 9
  br i1 %27, label %28, label %32

28:                                               ; preds = %25
  %29 = load i8*, i8** %3, align 8
  %30 = call i32 @memcmp(i8* %29, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i32 9)
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %42

32:                                               ; preds = %28, %25
  %33 = load i64, i64* %4, align 8
  %34 = icmp eq i64 %33, 8
  br i1 %34, label %35, label %40

35:                                               ; preds = %32
  %36 = load i8*, i8** %3, align 8
  %37 = call i32 @memcmp(i8* %36, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.4, i64 0, i64 0), i32 8)
  %38 = icmp ne i32 %37, 0
  %39 = xor i1 %38, true
  br label %40

40:                                               ; preds = %35, %32
  %41 = phi i1 [ false, %32 ], [ %39, %35 ]
  br label %42

42:                                               ; preds = %40, %28, %21, %14, %7
  %43 = phi i1 [ true, %28 ], [ true, %21 ], [ true, %14 ], [ true, %7 ], [ %41, %40 ]
  %44 = zext i1 %43 to i32
  ret i32 %44
}

declare dso_local i32 @memcmp(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
